# event-signup

./: .gitignore  cdk.json  package.json  pnpm-lock.yaml
lib/: consts.ts  domain.ts  event-table.ts  sentry.ts
lib/authentication/: authentication.ts  user-pool.ts
lib/backend/: api-lambda.ts  backend.ts  event-image-storage.ts  event-table.ts
lib/backend/api/: Cargo.toml
lib/backend/api/src/: main.rs
lib/backend/api/src/model/database/: errors.rs  event.rs  mod.rs  util.rs
lib/backend/api/src/model/rest/: error.rs
lib/backend/events-api/: Cargo.toml  build.rs  database-structure.json
lib/backend/events-api/src/: authentication.rs  configuration.rs  main.rs
lib/backend/events-api/src/api/: error.rs  get_event.rs  mod.rs  post_image.rs  put_image.rs
lib/backend/events-api/src/api/rest/: mod.rs
lib/backend/events-api/src/database/: util.rs
lib/backend/events-api/src/events/: errors.rs  mod.rs  models.rs  queries.rs
lib/backend/events-api/src/images/: errors.rs  mod.rs
lib/backend/events-api/src/model/database/: errors.rs  event.rs  util.rs
lib/backend/events-api/src/model/rest/: error.rs  mod.rs  (+1 more)
lib/backend/events-api/src/test_fixtures/: event.json
lib/frontend/events-site/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
lib/frontend/events-site/src/: App.css  App.tsx  error.ts  i18next.tsx  main.tsx
lib/frontend/events-site/src/common/: PublicViewHeader.tsx
lib/frontend/events-site/src/event/: Event.tsx
lib/frontend/events-site/src/languages/: english.json  swedish.json
lib/frontend/hosting/: events-site-bucket.ts  events-site-deployment-asset.ts  frontend.ts  index-redirect.ts
lib/gateway/: api-gateway.ts  cloudfront.ts  http-gateway.ts
lib/stacks/: cloudfront-stack.ts  signups-stack.ts
